vlib/v/checker/tests/time_duration_assign_to_int_err.vv
import time

struct Foo {
	x int
}

fn bad_struct_init() {
	d := time.second
	_ := Foo{
		x: d
	}
}

fn bad_struct_init_direct() {
	_ := Foo{
		x: time.second
	}
}

fn main() {}
